--- a/Guided_Capstone/Notebook_stepfourandfive.ipynb
+++ b/Guided_Capstone/Notebook_stepfourandfive.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 324,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 326,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 327,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 328,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 331,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 332,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 333,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 334,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 335,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -413,15 +413,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "explained_vaiance_score:  0.7474837944514854\n",
-      "mean_absolute_error:  5.885224347641935\n"
+      "explained_vaiance_score:  -1.2494839639380701e+23\n",
+      "mean_absolute_error:  936387891002.042\n"
      ]
     }
    ],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 337,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -455,7 +455,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56.514164516897935\n"
+      "-235404777008.68512\n"
      ]
     }
    ],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 338,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -500,63 +500,62 @@
      "output_type": "stream",
      "text": [
       "                       Coefficient\n",
-      "trams                 7.818026e+13\n",
-      "fastSixes             4.064353e+13\n",
-      "fastEight             3.069580e+13\n",
-      "total_chairs          7.884140e+12\n",
-      "surface               4.487611e+12\n",
-      "double                4.251957e+12\n",
-      "triple                3.710697e+12\n",
-      "quad                  2.240551e+12\n",
-      "fastQuads             1.727138e+12\n",
-      "state_New York        1.350195e+12\n",
-      "state_Michigan        1.216227e+12\n",
-      "state_New Hampshire   1.055496e+12\n",
-      "state_Wisconsin       1.009681e+12\n",
-      "state_Pennsylvania    1.009681e+12\n",
-      "state_Minnesota       9.089692e+11\n",
-      "state_California      8.530012e+11\n",
-      "state_Vermont         8.530012e+11\n",
-      "state_New Mexico      7.922528e+11\n",
-      "state_Idaho           7.922528e+11\n",
-      "state_Wyoming         7.255242e+11\n",
-      "state_Connecticut     7.255242e+11\n",
-      "state_Maine           7.255242e+11\n",
-      "state_Ohio            6.509789e+11\n",
-      "state_Colorado        6.509789e+11\n",
-      "state_Massachusetts   6.509789e+11\n",
-      "state_Iowa            5.655343e+11\n",
-      "state_Oregon          5.655343e+11\n",
-      "state_Utah            5.655343e+11\n",
-      "state_Illinois        5.655343e+11\n",
-      "state_Washington      5.655343e+11\n",
-      "state_West Virginia   5.655343e+11\n",
-      "state_North Carolina  5.655343e+11\n",
-      "state_Indiana         4.631976e+11\n",
-      "state_Montana         4.631976e+11\n",
-      "state_Missouri        4.631976e+11\n",
-      "state_Virginia        4.631976e+11\n",
-      "state_South Dakota    3.285457e+11\n",
-      "state_Arizona         3.285457e+11\n",
-      "state_Alaska          3.285457e+11\n",
-      "state_Maryland        3.285457e+11\n",
-      "state_Nevada          3.285457e+11\n",
-      "state_Rhode Island    3.285457e+11\n",
-      "state_New Jersey      3.285457e+11\n",
-      "state_Tennessee       3.285457e+11\n",
-      "AdultWeekday          8.851562e+00\n",
-      "Runs                  1.710938e+00\n",
-      "summit_elev           1.660951e+00\n",
-      "NightSkiing_ac        1.460449e+00\n",
-      "Snow Making_ac        1.386719e+00\n",
-      "projectedDaysOpen     1.301270e+00\n",
-      "SkiableTerrain_ac     1.164062e+00\n",
-      "LongestRun_mi         8.828125e-01\n",
-      "averageSnowfall       7.500000e-01\n",
-      "yearsOpen             3.144531e-01\n",
-      "TerrainParks          1.787109e-01\n",
-      "vertical_drop         1.111768e-01\n",
-      "daysOpenLastYear      2.929688e-02\n"
+      "total_chairs          2.282087e+13\n",
+      "state_New York        1.355490e+13\n",
+      "surface               1.226970e+13\n",
+      "state_Michigan        1.167147e+13\n",
+      "double                1.160688e+13\n",
+      "state_New Hampshire   1.093160e+13\n",
+      "state_Wisconsin       1.053433e+13\n",
+      "triple                9.973568e+12\n",
+      "state_Pennsylvania    9.673894e+12\n",
+      "state_Minnesota       9.204574e+12\n",
+      "state_Vermont         8.165283e+12\n",
+      "state_California      8.165283e+12\n",
+      "state_Massachusetts   7.581527e+12\n",
+      "state_Idaho           7.581527e+12\n",
+      "state_New Mexico      7.581527e+12\n",
+      "state_Connecticut     6.940929e+12\n",
+      "state_Maine           6.940929e+12\n",
+      "state_Colorado        6.940929e+12\n",
+      "state_Wyoming         6.940929e+12\n",
+      "fastQuads             6.491311e+12\n",
+      "quad                  6.368317e+12\n",
+      "state_North Carolina  6.225970e+12\n",
+      "state_Ohio            6.225970e+12\n",
+      "state_Utah            6.225970e+12\n",
+      "state_Virginia        5.407231e+12\n",
+      "state_West Virginia   5.407231e+12\n",
+      "state_Illinois        5.407231e+12\n",
+      "state_Iowa            5.407231e+12\n",
+      "state_Washington      5.407231e+12\n",
+      "state_Oregon          5.407231e+12\n",
+      "state_New Jersey      4.427511e+12\n",
+      "state_Missouri        4.427511e+12\n",
+      "state_Arizona         4.427511e+12\n",
+      "state_Indiana         4.427511e+12\n",
+      "state_South Dakota    4.427511e+12\n",
+      "state_Montana         4.427511e+12\n",
+      "state_Tennessee       3.139554e+12\n",
+      "state_Rhode Island    3.139554e+12\n",
+      "state_Alaska          3.139554e+12\n",
+      "state_Nevada          3.139554e+12\n",
+      "fastSixes             2.365642e+12\n",
+      "trams                 1.275999e+12\n",
+      "state_Maryland        1.137226e+09\n",
+      "AdultWeekday          1.037549e+01\n",
+      "summit_elev           2.396838e+00\n",
+      "averageSnowfall       1.711914e+00\n",
+      "SkiableTerrain_ac     1.459961e+00\n",
+      "vertical_drop         1.124001e+00\n",
+      "Snow Making_ac        1.060059e+00\n",
+      "NightSkiing_ac        9.111328e-01\n",
+      "Runs                  8.303528e-01\n",
+      "LongestRun_mi         7.631836e-01\n",
+      "daysOpenLastYear      6.186523e-01\n",
+      "yearsOpen             5.585327e-01\n",
+      "TerrainParks          3.911133e-01\n",
+      "projectedDaysOpen     3.623047e-01\n"
      ]
     }
    ],
@@ -588,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 340,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -603,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 341,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -624,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,15 +644,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "explained_vaiance_score:  0.7462642033230734\n",
-      "mean_absolute_error:  6.072115242441133\n"
+      "explained_vaiance_score:  0.775151728680886\n",
+      "mean_absolute_error:  6.512706378251336\n"
      ]
     }
    ],
@@ -667,14 +666,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56.734150613899715\n"
+      "57.51597976606887\n"
      ]
     }
    ],
@@ -684,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,36 +693,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                    Coefficient\n",
-      "AdultWeekday       1.119274e+01\n",
-      "vertical_drop      3.035008e+00\n",
-      "summit_elev        2.579744e+00\n",
-      "SkiableTerrain_ac  1.789168e+00\n",
-      "quad               1.774178e+00\n",
-      "LongestRun_mi      1.721203e+00\n",
-      "Snow Making_ac     1.443546e+00\n",
-      "projectedDaysOpen  1.242004e+00\n",
-      "triple             1.223300e+00\n",
-      "surface            1.205893e+00\n",
-      "daysOpenLastYear   1.172005e+00\n",
-      "fastQuads          1.077919e+00\n",
-      "double             1.037843e+00\n",
-      "averageSnowfall    8.153962e-01\n",
-      "total_chairs       7.171360e-01\n",
-      "Runs               3.673046e-01\n",
-      "NightSkiing_ac     1.506842e-01\n",
-      "TerrainParks       1.141282e-01\n",
-      "yearsOpen          3.177406e-02\n",
-      "trams              2.664535e-15\n",
-      "fastSixes          8.881784e-16\n",
-      "fastEight          2.220446e-16\n"
+      "                   Coefficient\n",
+      "AdultWeekday         10.804610\n",
+      "vertical_drop         3.746443\n",
+      "SkiableTerrain_ac     2.006130\n",
+      "summit_elev           1.738061\n",
+      "quad                  1.555589\n",
+      "daysOpenLastYear      1.386079\n",
+      "projectedDaysOpen     1.186394\n",
+      "fastSixes             1.091920\n",
+      "triple                0.935262\n",
+      "total_chairs          0.931033\n",
+      "Snow Making_ac        0.856981\n",
+      "surface               0.776056\n",
+      "fastQuads             0.652643\n",
+      "averageSnowfall       0.650662\n",
+      "NightSkiing_ac        0.579488\n",
+      "trams                 0.547855\n",
+      "TerrainParks          0.497322\n",
+      "double                0.466450\n",
+      "LongestRun_mi         0.408692\n",
+      "yearsOpen             0.165923\n",
+      "Runs                  0.163628\n"
      ]
     }
    ],
@@ -753,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 348,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -768,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 349,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -789,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 350,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -804,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,15 +812,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "explained_vaiance_score:  0.7484766746519762\n",
-      "mean_absolute_error:  6.279077754949654\n"
+      "explained_vaiance_score:  0.7777668686037429\n",
+      "mean_absolute_error:  6.355600596679503\n"
      ]
     }
    ],
@@ -836,14 +834,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56.722808153096985\n"
+      "57.55586183157726\n"
      ]
     }
    ],
@@ -853,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,35 +861,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                    Coefficient\n",
-      "AdultWeekday       1.096739e+01\n",
-      "vertical_drop      3.110985e+00\n",
-      "SkiableTerrain_ac  2.456987e+00\n",
-      "averageSnowfall    1.871428e+00\n",
-      "quad               1.514279e+00\n",
-      "LongestRun_mi      1.503176e+00\n",
-      "Snow Making_ac     1.467685e+00\n",
-      "triple             1.161987e+00\n",
-      "double             1.155078e+00\n",
-      "total_chairs       9.402450e-01\n",
-      "projectedDaysOpen  9.080206e-01\n",
-      "surface            8.853997e-01\n",
-      "daysOpenLastYear   7.409662e-01\n",
-      "fastQuads          7.119238e-01\n",
-      "NightSkiing_ac     3.161335e-01\n",
-      "TerrainParks       2.154870e-01\n",
-      "Runs               1.388118e-01\n",
-      "yearsOpen          3.285238e-02\n",
-      "trams              1.332268e-15\n",
-      "fastSixes          1.332268e-15\n",
-      "fastEight          4.440892e-16\n"
+      "                   Coefficient\n",
+      "AdultWeekday         10.836588\n",
+      "vertical_drop         3.406817\n",
+      "SkiableTerrain_ac     2.557809\n",
+      "quad                  1.346843\n",
+      "averageSnowfall       1.245942\n",
+      "daysOpenLastYear      1.102341\n",
+      "total_chairs          0.990950\n",
+      "projectedDaysOpen     0.950726\n",
+      "fastSixes             0.932890\n",
+      "triple                0.882725\n",
+      "Snow Making_ac        0.873166\n",
+      "NightSkiing_ac        0.843134\n",
+      "double                0.620038\n",
+      "LongestRun_mi         0.598170\n",
+      "surface               0.594750\n",
+      "fastQuads             0.575337\n",
+      "trams                 0.476168\n",
+      "TerrainParks          0.394154\n",
+      "yearsOpen             0.102746\n",
+      "Runs                  0.052916\n"
      ]
     }
    ],
@@ -928,9 +925,9 @@
    "source": [
     "| Model | Explained Variance| Mean Absolute Error|Features Dropped|\n",
     "| --- | --- | --- | --- |\n",
-    "| Model 1. | 0.7474837944514854 |5.885224347641935  ||\n",
-    "| Model 2. | 0.7462642033230734|6.072115242441133 |'state'|\n",
-    "| Model 3. | 0.7484766746519762 |6.279077754949654 |'state','summit_elev','base_elev'|"
+    "| Model 1. | -1.2494839639380701e+23 |936387891002.042  ||\n",
+    "| Model 2. | 0.775151728680886|6.512706378251336 |'state'|\n",
+    "| Model 3. | 0.7777668686037429 |6.355600596679503 |'state','summit_elev','base_elev'|"
    ]
   },
   {
