--- a/Guided_Capstone/Notebook_stepfourandfive.ipynb
+++ b/Guided_Capstone/Notebook_stepfourandfive.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 416,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 418,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 419,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 420,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 421,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 422,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 423,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 424,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 425,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -413,15 +413,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "explained_vaiance_score:  -1.2494839639380701e+23\n",
-      "mean_absolute_error:  936387891002.042\n"
+      "explained_vaiance_score:  -1.1691191971732987e+23\n",
+      "mean_absolute_error:  936755800739.2261\n"
      ]
     }
    ],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 427,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -455,7 +455,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-235404777008.68512\n"
+      "236324411799.34882\n"
      ]
     }
    ],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 428,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [
     {
@@ -500,62 +500,63 @@
      "output_type": "stream",
      "text": [
       "                       Coefficient\n",
-      "total_chairs          2.282087e+13\n",
-      "state_New York        1.355490e+13\n",
-      "surface               1.226970e+13\n",
-      "state_Michigan        1.167147e+13\n",
-      "double                1.160688e+13\n",
-      "state_New Hampshire   1.093160e+13\n",
-      "state_Wisconsin       1.053433e+13\n",
-      "triple                9.973568e+12\n",
-      "state_Pennsylvania    9.673894e+12\n",
-      "state_Minnesota       9.204574e+12\n",
-      "state_Vermont         8.165283e+12\n",
-      "state_California      8.165283e+12\n",
-      "state_Massachusetts   7.581527e+12\n",
-      "state_Idaho           7.581527e+12\n",
-      "state_New Mexico      7.581527e+12\n",
-      "state_Connecticut     6.940929e+12\n",
-      "state_Maine           6.940929e+12\n",
-      "state_Colorado        6.940929e+12\n",
-      "state_Wyoming         6.940929e+12\n",
-      "fastQuads             6.491311e+12\n",
-      "quad                  6.368317e+12\n",
-      "state_North Carolina  6.225970e+12\n",
-      "state_Ohio            6.225970e+12\n",
-      "state_Utah            6.225970e+12\n",
-      "state_Virginia        5.407231e+12\n",
-      "state_West Virginia   5.407231e+12\n",
-      "state_Illinois        5.407231e+12\n",
-      "state_Iowa            5.407231e+12\n",
-      "state_Washington      5.407231e+12\n",
-      "state_Oregon          5.407231e+12\n",
-      "state_New Jersey      4.427511e+12\n",
-      "state_Missouri        4.427511e+12\n",
-      "state_Arizona         4.427511e+12\n",
-      "state_Indiana         4.427511e+12\n",
-      "state_South Dakota    4.427511e+12\n",
-      "state_Montana         4.427511e+12\n",
-      "state_Tennessee       3.139554e+12\n",
-      "state_Rhode Island    3.139554e+12\n",
-      "state_Alaska          3.139554e+12\n",
-      "state_Nevada          3.139554e+12\n",
-      "fastSixes             2.365642e+12\n",
-      "trams                 1.275999e+12\n",
-      "state_Maryland        1.137226e+09\n",
-      "AdultWeekday          1.037549e+01\n",
-      "summit_elev           2.396838e+00\n",
-      "averageSnowfall       1.711914e+00\n",
-      "SkiableTerrain_ac     1.459961e+00\n",
-      "vertical_drop         1.124001e+00\n",
-      "Snow Making_ac        1.060059e+00\n",
-      "NightSkiing_ac        9.111328e-01\n",
-      "Runs                  8.303528e-01\n",
-      "LongestRun_mi         7.631836e-01\n",
-      "daysOpenLastYear      6.186523e-01\n",
-      "yearsOpen             5.585327e-01\n",
-      "TerrainParks          3.911133e-01\n",
-      "projectedDaysOpen     3.623047e-01\n"
+      "fastEight             4.105281e+12\n",
+      "total_chairs          1.778877e+12\n",
+      "fastQuads             6.743129e+11\n",
+      "surface               6.293894e+11\n",
+      "double                5.560638e+11\n",
+      "state_New York        5.228692e+11\n",
+      "triple                4.961700e+11\n",
+      "state_Michigan        4.856825e+11\n",
+      "state_Colorado        4.347812e+11\n",
+      "state_California      4.254762e+11\n",
+      "state_Pennsylvania    4.060204e+11\n",
+      "quad                  4.023439e+11\n",
+      "state_Wisconsin       3.743884e+11\n",
+      "state_New Hampshire   3.743884e+11\n",
+      "state_Vermont         3.630786e+11\n",
+      "state_Minnesota       3.513254e+11\n",
+      "state_Utah            3.390826e+11\n",
+      "state_Montana         3.262950e+11\n",
+      "state_Idaho           3.262950e+11\n",
+      "state_Massachusetts   3.128961e+11\n",
+      "state_Oregon          2.988034e+11\n",
+      "state_Washington      2.988034e+11\n",
+      "state_New Mexico      2.839138e+11\n",
+      "state_Maine           2.839138e+11\n",
+      "state_Wyoming         2.680944e+11\n",
+      "state_North Carolina  2.328987e+11\n",
+      "state_Ohio            2.129353e+11\n",
+      "state_Connecticut     2.129353e+11\n",
+      "fastSixes             1.999413e+11\n",
+      "state_Nevada          1.907488e+11\n",
+      "state_Illinois        1.907488e+11\n",
+      "state_Virginia        1.907488e+11\n",
+      "state_West Virginia   1.907488e+11\n",
+      "trams                 1.717913e+11\n",
+      "state_Iowa            1.654473e+11\n",
+      "state_Alaska          1.654473e+11\n",
+      "state_South Dakota    1.352942e+11\n",
+      "state_Arizona         1.352942e+11\n",
+      "state_Missouri        1.352942e+11\n",
+      "state_Indiana         1.352942e+11\n",
+      "state_Rhode Island    9.581360e+10\n",
+      "state_Maryland        9.581360e+10\n",
+      "state_Tennessee       9.581360e+10\n",
+      "state_New Jersey      2.290604e+03\n",
+      "AdultWeekday          1.978418e+01\n",
+      "summit_elev           2.549096e+00\n",
+      "Runs                  1.354797e+00\n",
+      "Snow Making_ac        1.295166e+00\n",
+      "NightSkiing_ac        1.174072e+00\n",
+      "vertical_drop         1.005206e+00\n",
+      "LongestRun_mi         4.559326e-01\n",
+      "SkiableTerrain_ac     3.615723e-01\n",
+      "projectedDaysOpen     3.239746e-01\n",
+      "averageSnowfall       2.852783e-01\n",
+      "daysOpenLastYear      2.803955e-01\n",
+      "TerrainParks          2.321777e-01\n",
+      "yearsOpen             1.047821e-01\n"
      ]
     }
    ],
@@ -587,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 435,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -597,12 +598,12 @@
    "source": [
     "# drop state column from dataframe\n",
     "df2 = pd.read_csv(os.path.join(data_dir,'step3_output.csv'),sep='\\t')\n",
-    "X2 = df2.drop(['state','Name','AdultWeekend','clusters'], axis=1)"
+    "X2 = df2.drop(['state','Name','AdultWeekend'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 436,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -623,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,15 +645,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "explained_vaiance_score:  0.775151728680886\n",
-      "mean_absolute_error:  6.512706378251336\n"
+      "explained_vaiance_score:  0.897895869840222\n",
+      "mean_absolute_error:  5.804824974000846\n"
      ]
     }
    ],
@@ -666,14 +667,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "57.51597976606887\n"
+      "64.12769707219066\n"
      ]
     }
    ],
@@ -683,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,35 +694,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                   Coefficient\n",
-      "AdultWeekday         10.804610\n",
-      "vertical_drop         3.746443\n",
-      "SkiableTerrain_ac     2.006130\n",
-      "summit_elev           1.738061\n",
-      "quad                  1.555589\n",
-      "daysOpenLastYear      1.386079\n",
-      "projectedDaysOpen     1.186394\n",
-      "fastSixes             1.091920\n",
-      "triple                0.935262\n",
-      "total_chairs          0.931033\n",
-      "Snow Making_ac        0.856981\n",
-      "surface               0.776056\n",
-      "fastQuads             0.652643\n",
-      "averageSnowfall       0.650662\n",
-      "NightSkiing_ac        0.579488\n",
-      "trams                 0.547855\n",
-      "TerrainParks          0.497322\n",
-      "double                0.466450\n",
-      "LongestRun_mi         0.408692\n",
-      "yearsOpen             0.165923\n",
-      "Runs                  0.163628\n"
+      "                    Coefficient\n",
+      "AdultWeekday       1.995936e+01\n",
+      "clusters           6.311616e+00\n",
+      "summit_elev        4.611518e+00\n",
+      "SkiableTerrain_ac  2.181497e+00\n",
+      "vertical_drop      1.882141e+00\n",
+      "NightSkiing_ac     1.605362e+00\n",
+      "Snow Making_ac     1.535660e+00\n",
+      "surface            1.281830e+00\n",
+      "fastSixes          1.176145e+00\n",
+      "fastQuads          1.126889e+00\n",
+      "Runs               1.084779e+00\n",
+      "triple             9.877901e-01\n",
+      "quad               8.441318e-01\n",
+      "TerrainParks       7.756796e-01\n",
+      "trams              7.408327e-01\n",
+      "total_chairs       5.705196e-01\n",
+      "LongestRun_mi      4.045848e-01\n",
+      "double             2.232545e-01\n",
+      "daysOpenLastYear   1.238936e-01\n",
+      "yearsOpen          1.181421e-01\n",
+      "averageSnowfall    1.050757e-01\n",
+      "projectedDaysOpen  1.864247e-02\n",
+      "fastEight          3.552714e-15\n"
      ]
     }
    ],
@@ -751,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 443,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -761,12 +764,12 @@
    "source": [
     "# drop state column from dataframe\n",
     "df3 = pd.read_csv(os.path.join(data_dir,'step3_output.csv'),sep='\\t')\n",
-    "X3 = df3.drop(['state','Name','AdultWeekend','summit_elev','clusters'], axis=1)"
+    "X3 = df3.drop(['state','Name','AdultWeekend','summit_elev'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 444,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -787,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 445,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -802,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 446,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,15 +815,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 447,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "explained_vaiance_score:  0.7777668686037429\n",
-      "mean_absolute_error:  6.355600596679503\n"
+      "explained_vaiance_score:  0.8953112166541771\n",
+      "mean_absolute_error:  5.7197803110671765\n"
      ]
     }
    ],
@@ -834,14 +837,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "57.55586183157726\n"
+      "64.11101380678544\n"
      ]
     }
    ],
@@ -851,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 449,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,34 +864,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                   Coefficient\n",
-      "AdultWeekday         10.836588\n",
-      "vertical_drop         3.406817\n",
-      "SkiableTerrain_ac     2.557809\n",
-      "quad                  1.346843\n",
-      "averageSnowfall       1.245942\n",
-      "daysOpenLastYear      1.102341\n",
-      "total_chairs          0.990950\n",
-      "projectedDaysOpen     0.950726\n",
-      "fastSixes             0.932890\n",
-      "triple                0.882725\n",
-      "Snow Making_ac        0.873166\n",
-      "NightSkiing_ac        0.843134\n",
-      "double                0.620038\n",
-      "LongestRun_mi         0.598170\n",
-      "surface               0.594750\n",
-      "fastQuads             0.575337\n",
-      "trams                 0.476168\n",
-      "TerrainParks          0.394154\n",
-      "yearsOpen             0.102746\n",
-      "Runs                  0.052916\n"
+      "                    Coefficient\n",
+      "AdultWeekday       2.024011e+01\n",
+      "clusters           2.992526e+00\n",
+      "vertical_drop      2.784703e+00\n",
+      "Snow Making_ac     1.816696e+00\n",
+      "fastSixes          1.235781e+00\n",
+      "surface            1.174397e+00\n",
+      "Runs               1.145277e+00\n",
+      "NightSkiing_ac     1.115082e+00\n",
+      "SkiableTerrain_ac  1.096735e+00\n",
+      "quad               1.082895e+00\n",
+      "triple             1.041710e+00\n",
+      "TerrainParks       9.626981e-01\n",
+      "trams              9.620400e-01\n",
+      "fastQuads          8.378244e-01\n",
+      "daysOpenLastYear   6.433748e-01\n",
+      "total_chairs       5.675776e-01\n",
+      "projectedDaysOpen  5.275613e-01\n",
+      "LongestRun_mi      3.887476e-01\n",
+      "double             2.688058e-01\n",
+      "averageSnowfall    2.582642e-01\n",
+      "yearsOpen          6.264172e-02\n",
+      "fastEight          1.554312e-15\n"
      ]
     }
    ],
